# esp32_bridge

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  partitions.csv  sdkconfig
components/button/: CMakeLists.txt  button.c
components/button/include/: button.h
components/mcp2515/: CMakeLists.txt
components/mcp2515/include/: mcp2515.h
components/mcp2515/src/: mcp2515.cpp
components/protocol/: CMakeLists.txt
components/protocol/include/: Bluetooth.h  CAN.h  TCP.h  TCP_Server.h  UDP.h  UDP_Server.h  device_data.h  gatt_svr.h  simulation.h  simulation_buffer.h  simulation_data.h
components/protocol/src/: Bluetooth.cpp  CAN.cpp  TCP.cpp  TCP_Server.cpp  UDP.cpp  UDP_Server.cpp  gatt_svr.c  simulation.cpp  simulation_buffer.c
components/protocol_examples/: CMakeLists.txt  connect.c  console_cmd.c  eth_connect.c
main/: CMakeLists.txt  config.c  idf_component.yml  main.cpp  status_led.c  uart.c  web_server.c  wifi.c
main/certs/: ca_cert.pem
main/common_protocol/include/: common_protocol.h
main/common_protocol/src/: common_protocol.cpp
main/include/: config.h  core_dump.h  log.h  retry.h  status_led.h  stream_stats.h  uart.h  util.h  web_server.h  wifi.h
main/include/interface/: socket_server.h  user_test_data_com.h  web_socket_client.h
main/interface/: socket_server.c  web_socket_client.cpp
www/: bootstrap.min.css  login.html  main.css  main.html  main_2.html  settings.html  test_mode.html
